compiler/src/antlr/gen/de/adrodoc55/minecraft/mpl/antlr/MplParser.java
// Generated from C:\Users\adrian\Programme\workspace\MPL\compiler\src\antlr\def\de\adrodoc55\minecraft\mpl\antlr\Mpl.g4 by ANTLR 4.5
package de.adrodoc55.minecraft.mpl.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MplParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, COMMENT=5, COMMAND=6, IMPORT=7, PROJECT=8, 
		INCLUDE=9, ORIENTATION=10, INSTALL=11, UNINSTALL=12, PROCESS=13, IMPULSE=14, 
		CHAIN=15, REPEAT=16, UNCONDITIONAL=17, CONDITIONAL=18, INVERT=19, ALWAYS_ACTIVE=20, 
		NEEDS_REDSTONE=21, START=22, STOP=23, WAITFOR=24, NOTIFY=25, INTERCEPT=26, 
		BREAKPOINT=27, SKIP=28, IF=29, NOT=30, THEN=31, ELSE=32, UNSIGNED_INT=33, 
		WS=34, STRING=35, IDENTIFIER=36, UNRECOGNIZED=37;
	public static final int
		RULE_file = 0, RULE_scriptFile = 1, RULE_projectFile = 2, RULE_importDeclaration = 3, 
		RULE_project = 4, RULE_orientation = 5, RULE_include = 6, RULE_install = 7, 
		RULE_uninstall = 8, RULE_process = 9, RULE_chain = 10, RULE_ifDeclaration = 11, 
		RULE_then = 12, RULE_elseDeclaration = 13, RULE_mplCommand = 14, RULE_modifierList = 15, 
		RULE_modus = 16, RULE_conditional = 17, RULE_auto = 18, RULE_command = 19, 
		RULE_start = 20, RULE_stop = 21, RULE_waitfor = 22, RULE_notifyDeclaration = 23, 
		RULE_intercept = 24, RULE_breakpoint = 25, RULE_skip = 26;
	public static final String[] ruleNames = {
		"file", "scriptFile", "projectFile", "importDeclaration", "project", "orientation", 
		"include", "install", "uninstall", "process", "chain", "ifDeclaration", 
		"then", "elseDeclaration", "mplCommand", "modifierList", "modus", "conditional", 
		"auto", "command", "start", "stop", "waitfor", "notifyDeclaration", "intercept", 
		"breakpoint", "skip"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "':'", "','", null, null, "'import'", "'project'", 
		"'include'", "'orientation'", "'install'", "'uninstall'", "'process'", 
		"'impulse'", "'chain'", "'repeat'", "'unconditional'", "'conditional'", 
		"'invert'", "'always active'", "'needs redstone'", "'start'", "'stop'", 
		"'waitfor'", "'notify'", "'intercept'", "'breakpoint'", "'skip'", "'if'", 
		"'not'", "'then'", "'else'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, "COMMENT", "COMMAND", "IMPORT", "PROJECT", 
		"INCLUDE", "ORIENTATION", "INSTALL", "UNINSTALL", "PROCESS", "IMPULSE", 
		"CHAIN", "REPEAT", "UNCONDITIONAL", "CONDITIONAL", "INVERT", "ALWAYS_ACTIVE", 
		"NEEDS_REDSTONE", "START", "STOP", "WAITFOR", "NOTIFY", "INTERCEPT", "BREAKPOINT", 
		"SKIP", "IF", "NOT", "THEN", "ELSE", "UNSIGNED_INT", "WS", "STRING", "IDENTIFIER", 
		"UNRECOGNIZED"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Mpl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MplParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MplParser.EOF, 0); }
		public ScriptFileContext scriptFile() {
			return getRuleContext(ScriptFileContext.class,0);
		}
		public ProjectFileContext projectFile() {
			return getRuleContext(ProjectFileContext.class,0);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MplVisitor ) return ((MplVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(54);
				scriptFile();
				}
				break;
			case 2:
				{
				setState(55);
				projectFile();
				}
				break;
			}
			setState(58);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScriptFileContext extends ParserRuleContext {
		public List<OrientationContext> orientation() {
			return getRuleContexts(OrientationContext.class);
		}
		public OrientationContext orientation(int i) {
			return getRuleContext(OrientationContext.class,i);
		}
		public List<InstallContext> install() {
			return getRuleContexts(InstallContext.class);
		}
		public InstallContext install(int i) {
			return getRuleContext(InstallContext.class,i);
		}
		public List<UninstallContext> uninstall() {
			return getRuleContexts(UninstallContext.class);
		}
		public UninstallContext uninstall(int i) {
			return getRuleContext(UninstallContext.class,i);
		}
		public List<ChainContext> chain() {
			return getRuleContexts(ChainContext.class);
		}
		public ChainContext chain(int i) {
			return getRuleContext(ChainContext.class,i);
		}
		public ScriptFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scriptFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).enterScriptFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).exitScriptFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MplVisitor ) return ((MplVisitor<? extends T>)visitor).visitScriptFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptFileContext scriptFile() throws RecognitionException {
		ScriptFileContext _localctx = new ScriptFileContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_scriptFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMMAND) | (1L << ORIENTATION) | (1L << INSTALL) | (1L << UNINSTALL) | (1L << IMPULSE) | (1L << CHAIN) | (1L << REPEAT) | (1L << UNCONDITIONAL) | (1L << CONDITIONAL) | (1L << INVERT) | (1L << ALWAYS_ACTIVE) | (1L << NEEDS_REDSTONE) | (1L << START) | (1L << STOP) | (1L << WAITFOR) | (1L << NOTIFY) | (1L << INTERCEPT) | (1L << BREAKPOINT) | (1L << SKIP) | (1L << IF))) != 0)) {
				{
				setState(64);
				switch (_input.LA(1)) {
				case ORIENTATION:
					{
					setState(60);
					orientation();
					}
					break;
				case INSTALL:
					{
					setState(61);
					install();
					}
					break;
				case UNINSTALL:
					{
					setState(62);
					uninstall();
					}
					break;
				case COMMAND:
				case IMPULSE:
				case CHAIN:
				case REPEAT:
				case UNCONDITIONAL:
				case CONDITIONAL:
				case INVERT:
				case ALWAYS_ACTIVE:
				case NEEDS_REDSTONE:
				case START:
				case STOP:
				case WAITFOR:
				case NOTIFY:
				case INTERCEPT:
				case BREAKPOINT:
				case SKIP:
				case IF:
					{
					setState(63);
					chain();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProjectFileContext extends ParserRuleContext {
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public List<ProjectContext> project() {
			return getRuleContexts(ProjectContext.class);
		}
		public ProjectContext project(int i) {
			return getRuleContext(ProjectContext.class,i);
		}
		public List<InstallContext> install() {
			return getRuleContexts(InstallContext.class);
		}
		public InstallContext install(int i) {
			return getRuleContext(InstallContext.class,i);
		}
		public List<UninstallContext> uninstall() {
			return getRuleContexts(UninstallContext.class);
		}
		public UninstallContext uninstall(int i) {
			return getRuleContext(UninstallContext.class,i);
		}
		public List<ProcessContext> process() {
			return getRuleContexts(ProcessContext.class);
		}
		public ProcessContext process(int i) {
			return getRuleContext(ProcessContext.class,i);
		}
		public ProjectFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_projectFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).enterProjectFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).exitProjectFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MplVisitor ) return ((MplVisitor<? extends T>)visitor).visitProjectFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProjectFileContext projectFile() throws RecognitionException {
		ProjectFileContext _localctx = new ProjectFileContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_projectFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(69);
				importDeclaration();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PROJECT) | (1L << INSTALL) | (1L << UNINSTALL) | (1L << PROCESS) | (1L << IMPULSE) | (1L << REPEAT))) != 0)) {
				{
				setState(79);
				switch (_input.LA(1)) {
				case PROJECT:
					{
					setState(75);
					project();
					}
					break;
				case INSTALL:
					{
					setState(76);
					install();
					}
					break;
				case UNINSTALL:
					{
					setState(77);
					uninstall();
					}
					break;
				case PROCESS:
				case IMPULSE:
				case REPEAT:
					{
					setState(78);
					process();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDeclarationContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(MplParser.IMPORT, 0); }
		public TerminalNode STRING() { return getToken(MplParser.STRING, 0); }
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).enterImportDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).exitImportDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MplVisitor ) return ((MplVisitor<? extends T>)visitor).visitImportDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(IMPORT);
			setState(85);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProjectContext extends ParserRuleContext {
		public TerminalNode PROJECT() { return getToken(MplParser.PROJECT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(MplParser.IDENTIFIER, 0); }
		public List<OrientationContext> orientation() {
			return getRuleContexts(OrientationContext.class);
		}
		public OrientationContext orientation(int i) {
			return getRuleContext(OrientationContext.class,i);
		}
		public List<IncludeContext> include() {
			return getRuleContexts(IncludeContext.class);
		}
		public IncludeContext include(int i) {
			return getRuleContext(IncludeContext.class,i);
		}
		public ProjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_project; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).enterProject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).exitProject(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MplVisitor ) return ((MplVisitor<? extends T>)visitor).visitProject(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProjectContext project() throws RecognitionException {
		ProjectContext _localctx = new ProjectContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_project);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(PROJECT);
			setState(88);
			match(IDENTIFIER);
			setState(89);
			match(T__0);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INCLUDE || _la==ORIENTATION) {
				{
				setState(92);
				switch (_input.LA(1)) {
				case ORIENTATION:
					{
					setState(90);
					orientation();
					}
					break;
				case INCLUDE:
					{
					setState(91);
					include();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrientationContext extends ParserRuleContext {
		public TerminalNode ORIENTATION() { return getToken(MplParser.ORIENTATION, 0); }
		public TerminalNode STRING() { return getToken(MplParser.STRING, 0); }
		public OrientationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orientation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).enterOrientation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).exitOrientation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MplVisitor ) return ((MplVisitor<? extends T>)visitor).visitOrientation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OrientationContext orientation() throws RecognitionException {
		OrientationContext _localctx = new OrientationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_orientation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(ORIENTATION);
			setState(100);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeContext extends ParserRuleContext {
		public TerminalNode INCLUDE() { return getToken(MplParser.INCLUDE, 0); }
		public TerminalNode STRING() { return getToken(MplParser.STRING, 0); }
		public IncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).enterInclude(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).exitInclude(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MplVisitor ) return ((MplVisitor<? extends T>)visitor).visitInclude(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IncludeContext include() throws RecognitionException {
		IncludeContext _localctx = new IncludeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_include);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(INCLUDE);
			setState(103);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstallContext extends ParserRuleContext {
		public TerminalNode INSTALL() { return getToken(MplParser.INSTALL, 0); }
		public ChainContext chain() {
			return getRuleContext(ChainContext.class,0);
		}
		public InstallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_install; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).enterInstall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).exitInstall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MplVisitor ) return ((MplVisitor<? extends T>)visitor).visitInstall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstallContext install() throws RecognitionException {
		InstallContext _localctx = new InstallContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_install);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(INSTALL);
			setState(106);
			match(T__0);
			setState(107);
			chain();
			setState(108);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UninstallContext extends ParserRuleContext {
		public TerminalNode UNINSTALL() { return getToken(MplParser.UNINSTALL, 0); }
		public ChainContext chain() {
			return getRuleContext(ChainContext.class,0);
		}
		public UninstallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_uninstall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).enterUninstall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).exitUninstall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MplVisitor ) return ((MplVisitor<? extends T>)visitor).visitUninstall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UninstallContext uninstall() throws RecognitionException {
		UninstallContext _localctx = new UninstallContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_uninstall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(UNINSTALL);
			setState(111);
			match(T__0);
			setState(112);
			chain();
			setState(113);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcessContext extends ParserRuleContext {
		public TerminalNode PROCESS() { return getToken(MplParser.PROCESS, 0); }
		public TerminalNode IDENTIFIER() { return getToken(MplParser.IDENTIFIER, 0); }
		public ChainContext chain() {
			return getRuleContext(ChainContext.class,0);
		}
		public TerminalNode IMPULSE() { return getToken(MplParser.IMPULSE, 0); }
		public TerminalNode REPEAT() { return getToken(MplParser.REPEAT, 0); }
		public ProcessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_process; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).enterProcess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).exitProcess(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MplVisitor ) return ((MplVisitor<? extends T>)visitor).visitProcess(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcessContext process() throws RecognitionException {
		ProcessContext _localctx = new ProcessContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_process);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_la = _input.LA(1);
			if (_la==IMPULSE || _la==REPEAT) {
				{
				setState(115);
				_la = _input.LA(1);
				if ( !(_la==IMPULSE || _la==REPEAT) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
			}

			setState(118);
			match(PROCESS);
			setState(119);
			match(IDENTIFIER);
			setState(120);
			match(T__0);
			setState(121);
			chain();
			setState(122);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChainContext extends ParserRuleContext {
		public List<IfDeclarationContext> ifDeclaration() {
			return getRuleContexts(IfDeclarationContext.class);
		}
		public IfDeclarationContext ifDeclaration(int i) {
			return getRuleContext(IfDeclarationContext.class,i);
		}
		public List<MplCommandContext> mplCommand() {
			return getRuleContexts(MplCommandContext.class);
		}
		public MplCommandContext mplCommand(int i) {
			return getRuleContext(MplCommandContext.class,i);
		}
		public List<SkipContext> skip() {
			return getRuleContexts(SkipContext.class);
		}
		public SkipContext skip(int i) {
			return getRuleContext(SkipContext.class,i);
		}
		public ChainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chain; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).enterChain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MplListener ) ((MplListener)listener).exitChain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MplVisitor ) return ((MplVisitor<? extends T>)visitor).visitChain(this);
			else return visitor.visitChildren(this);
		}
	}
